# Qt-based-video-editor

./: .clang-format  .gitignore  CMakeLists.txt  README.md
doc/: README_cn.md
src/: DialogManager.cpp  DialogManager.h  MaterialLibraryManager.cpp  MaterialLibraryManager.h  PreviewWindow.cpp  PreviewWindow.h  QtBasedVideoEditor.cpp  QtBasedVideoEditor.h  QtBasedVideoEditor.ui  TimelineManager.cpp  TimelineManager.h  VideoListManager.cpp  VideoListManager.h  main.cpp
src/backend/: Editor.cpp  Editor.h  ResVideo.cpp  ResVideo.h  Resource.cpp  Resource.h  Resources.cpp  Resources.h
